# hls

./: .gitignore  Cargo.toml  build.rs  build.sh  queries.hx  schema.hx  test.hx
add_n/: queries.hx  schema.hx
extension/: .vscodeignore  LICENSE  PUBLISHING.md  README.md  helix-query-language-0.1.1.vsix  helix-query-language-0.1.2.vsix  helix-query-language-0.1.5.vsix  helix-query-language-0.1.6.vsix  helix-query-language-0.1.7.vsix  helix-query-language-0.1.8.vsix  helix-query-language-0.1.9.vsix  language-configation.json  language-configuration.json  package-lock.json  package.json  tsconfig.json
extension/scripts/: build.js
extension/src/: extension.ts
extension/syntaxes/: hql.tmLanguage.json
src/: grammar.pest  main.rs
test_subdir/: queries.hx  schema.hx
