[package]
name = "hql"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.28", features = ["full"] }
env_logger = "0.11.6"
log = "0.4"
serde_json = "1.0"
dashmap = "6.1.0"
pest = "2.7"
pest_derive = "2.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
