[package]
name = "helixql-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"

# Your local analyzer crate - adjust path as needed
helixdb = { path = "/Users/xav/GitHub/helix-db/helixdb" }

[build-dependencies]
built = "0.7"